--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,10 @@ body {
   cursor: pointer;
 }
 
+.burger {
+  display: none;
+}
+
 .container {
   max-width: 1800px;
   margin: 0 auto;
@@ -711,6 +715,15 @@ footer {
 /* Mobile 1199px */
 
 @media (max-width: 1199px) {
+  .container {
+    margin: 0 10px;
+  }
+
+  .header__logo {
+    width: 30%;
+    margin: 10px auto;
+  }
+
   .section-hero__container {
     background-size: cover;
   }
@@ -773,8 +786,43 @@ footer {
 
 /* Mobile 1099px */
 
-@media (max-width: 1099px) {
-  .header__nav-wrap {
+@media (max-width: 1120px) {
+  .header-container {
+    align-items: center;
+  }
+  
+  .burger {
+    display: block;
+    width: 30px;
+    position: relative;
+    height: 23px;
+    border: none;
+  }
+
+  .burger__line {
+    position: absolute;
+    display: inline-block;
+    width: 100%;
+    height: 3px;
+    background-color: var(--black-color);
+  }
+
+  .burger__line:first-child {
+    top: 0;
+    left: 0;
+  }
+
+  .burger__line:nth-child(2) {
+    top: 45%;
+    left: 0;
+  }
+
+  .burger__line:last-child {
+    bottom: 0;
+    left: 0;
+  }
+
+  .nav {
     display: none;
   }
 
@@ -791,9 +839,11 @@ footer {
 /* Mobile 850px */
 
 @media (max-width: 850px) {
+  
   .section-about__right-wrap {
     padding: 50px 25px 49px 273px;
   }
+
 }
 
 /* Mobile 769px */
@@ -883,6 +933,11 @@ footer {
     margin-right: 18px;
   }
 
+  .header__logo {
+    width: 50%;
+
+  }
+
   .section-about__right-wrap {
     padding: 190px 12px 47px 11px;
   }
@@ -913,7 +968,7 @@ footer {
     padding: 0 0 50px 0;
   }
 
-  .btn {
+  .section-hero__btn {
     padding: 16px 22px;
     border: none;
     font-size: 16.46px;
