--- a/css/style.css
+++ b/css/style.css
@@ -95,9 +95,33 @@ body {
   cursor: pointer;
 }
 
+.section-hero {
+  position: relative;
+  z-index: 0;
+}
+
+.swiper-container {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  list-style: none;
+  padding: 0;
+  z-index: 0;
+}
+
+.swiper-slide {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
 .burger {
   display: none;
 }
+
 
 .container {
   max-width: 1800px;
@@ -174,16 +198,36 @@ body {
 /* Section Hero */
 
 .section-hero__container {
-  min-height: 620px;
-  background-image: url("../img/slide_1.jpg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center center;
+  height: 620px;
 }
 
 .section-hero__wrap {
   padding: 20px 0 76px 80px;
   max-width: 894px;
+  position: absolute;
+  z-index: 2;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: var(--white-color);
+}
+
+.swiper-pagination-bullet {
+  margin: 15px 10px !important;
+  width: 15px !important;
+  height: 15px !important;
+  background-color: var(--white-color) !important;
+}
+
+.swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 0 10px !important;
+
+}
+
+.swiper-container-horizontal>.swiper-pagination-bullets,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+  bottom: 27px !important;
 }
 
 .section-hero__heading {
@@ -378,6 +422,12 @@ body {
   line-height: 22px;
   font-weight: 400;
   cursor: pointer;
+  transition: 0.4s;
+}
+
+.how-work__btn:hover {
+  color: var(--orange-color);
+  transition: 0.4s;
 }
 
 .tab-btn-active {
@@ -807,10 +857,16 @@ footer {
 /* Mobile 1099px */
 
 @media (max-width: 1120px) {
+
+  .header__nav-link {
+    font-size: 25px;
+    line-height: 50px;
+  }
+
   .header-container {
     align-items: center;
   }
-  
+
   .burger {
     display: block;
     width: 30px;
@@ -842,24 +898,75 @@ footer {
     left: 0;
   }
 
-  .nav {
-    display: none;
+
+  .header__nav-list {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 400px;
+    height: 720px;
+    padding: 40px;
+    background-color: #f2f2f2;
+    transition: transform .3s ease-in-out;
+    transform: translateX(-101%);
+  }
+
+
+  .header__nav-list.is-active {
+    transform: none;
+    transition: transform .3s ease-in-out;
+  }
+
+  .header__nav-list {
+    padding: 100px 50px 0px 65px;
+    opacity: 0.95;
+  }
+
+  .header__nav-btn-close {
+    width: 25px;
+    height: 25px;
+    border: none;
+    position: absolute;
+    top: 35px;
+    left: 50px;
+  }
+
+  .header__nav-btn-close::before,
+  .header__nav-btn-close::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: var(--black-color);
+  }
+
+
+  .header__nav-btn-close::before {
+    transform: rotate(45deg);
+  }
+
+  .header__nav-btn-close::after {
+    transform: rotate(-45deg);
   }
 
   .section-hero__heading {
-    font-size: 58px;
+    font-size: 55px;
     line-height: 69px;
   }
 
   .section-hero__text {
-    font-size: 21px;
+    font-size: 20px;
   }
 }
 
 /* Mobile 850px */
 
 @media (max-width: 850px) {
-  
+
   .section-about__right-wrap {
     padding: 50px 25px 49px 273px;
   }
@@ -869,6 +976,29 @@ footer {
 /* Mobile 769px */
 
 @media (max-width: 769px) {
+  .section-about__content-wrap {
+    margin-bottom: 60px;
+  }
+
+
+  .section-hero__wrap {
+    padding: 160px 40px 0 40px;
+  }
+
+  .section-hero__heading {
+    margin: 0;
+    font-size: 50px;
+    line-height: 60px;
+    margin-bottom: 16px;
+  }
+
+  .section-hero__text {
+    font-size: 18px;
+    line-height: 21px;
+    font-weight: 400;
+    padding: 0 0 60px 0;
+  }
+
   .footer__wrap-left {
     flex-direction: column;
   }
@@ -928,12 +1058,36 @@ footer {
 /* Mobile 679px */
 
 @media (max-width: 679px) {
-  .footer__wrap-center {
-    min-width: 100%;
+  .section-hero__wrap {
+    padding: 110px 40px 0 40px;
   }
 
-  .section-hero__wrap {
-    padding: 12px 0 76px 0px;
+  .section-hero__heading {
+    font-size: 35px;
+    line-height: 49px;
+  }
+
+  .section-hero__text {
+    font-size: 14px;
+  }
+
+  .section-hero__btn {
+    font-size: 18px;
+    padding: 15.83px 20.88px;
+  }
+
+  .often-question__item-heading {
+    font-size: 14px;
+    line-height: 24px;
+  }
+
+  .often-question__title {
+    font-size: 48px;
+    line-height: 51px;
+  }
+
+  .footer__wrap-center {
+    min-width: 100%;
   }
 
   .section-about__right-wrap {
@@ -949,13 +1103,65 @@ footer {
 /* Mobile 439px */
 
 @media (max-width: 439px) {
+  .header__nav-link {
+    font-size: 21px;
+  }
+
   .how-work__item:not(:last-child) {
     margin-right: 18px;
   }
 
   .header__logo {
     width: 50%;
+  }
 
+  .section-hero__heading {
+    text-align: center;
+    font-size: 29px;
+    line-height: 35px;
+  }
+
+  .section-hero__text {
+    text-align: center;
+    font-size: 17px;
+  }
+
+  .section-hero__btn {
+    padding: 10px 25px;
+    margin: 0 auto;
+    display: block;
+    font-size: 16px;
+  }
+
+  .section-about__title {
+    font-size: 29px;
+  }
+
+  .how-work__title {
+    font-size: 31px;
+    margin-bottom: 30px;
+  }
+
+  .often-question__title {
+    font-size: 29px;
+    line-height: 29px;
+  }
+
+  .often-question__item-heading {
+    font-weight: 400;
+  }
+
+  .wrap-center__heading {
+    font-size: 24px;
+    line-height: 35px;
+  }
+
+  .wrap-left-img {
+    width: 205px;
+  }
+
+  .wrap-center__btn-wrap {
+    flex-direction: column;
   }
 
   .section-about__right-wrap {
@@ -976,22 +1182,6 @@ footer {
 
   .how-work__content-left-btn-1 {
     margin-right: 15px;
-  }
-
-  .section-hero__heading {
-    font-size: 28px;
-    line-height: 35px;
-  }
-
-  .section-hero__text {
-    font-size: 15px;
-    padding: 0 0 50px 0;
-  }
-
-  .section-hero__btn {
-    padding: 16px 22px;
-    border: none;
-    font-size: 16.46px;
   }
 
   .section-about__text {
